<resources>
    <string name="app_name">Hex Coder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hex Coder &amp; Decoder</string>
    <string name="nav_header_subtitle">by SchoolHelp Team</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Hex Coder</string>
    <string name="menu_info">Info</string>
    <string name="menu_exit">Exit</string>

    <string name="textTitle">Input Text</string>
    <string name="btnDecodeTitle">Decode</string>
    <string name="btnEncodeTitle">Encode</string>
    <string name="btnClearTitle">Clear</string>
    <string name="btnCopyTitle">Copy</string>
    <string name="txtResultHint">Output</string>

    <string name="info_header">Programmers:</string>
    <string name="info_ziaee">*Hamidreza Ziaee</string>
    <string name="info_ziaeeId"><i>\@Hamidreza2010</i></string>
    <string name="info_nemati">*Mostafa Nemati</string>
    <string name="info_nematiId"><i>\@M_Nemati2010</i></string>

    <string name="dialog_exitApp">Exit Application</string>
    <string name="dialog_ok">Yes</string>
    <string name="dialog_no">No</string>

</resources>