<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:text="@string/info_header"
        android:textSize="24sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/info_ziaee"
        android:textSize="24sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/info_ziaeeId"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/info_nemati"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/info_nematiId"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>